Added 'browse' view [UI]

--- a/app/public/css/dxm.css
+++ b/app/public/css/dxm.css
@@ -1,1 +1,7 @@
+
 .angular-google-map-container { height: 400px; }
+
+.browse-view .angular-google-map-container { 
+	height: 400px;
+	width: 400px;
+{
