Experimenting with marker and window classes [UI].

--- a/app/public/css/dxm.css
+++ b/app/public/css/dxm.css
@@ -3,5 +3,14 @@
 
 .browse-view .angular-google-map-container { 
 	height: 400px;
-	width: 400px;
+/*	width: 400px;*/
+}
+
+.my-marker {
+	font-weight: bold;
+
+}
+
+.marker-tooltip {
+	max-width: 200px;
 }
