--- a/app/public/templates/profile.html
+++ b/app/public/templates/profile.html
@@ -2,8 +2,8 @@
 	<h1>profile</h1>
 	{{ctrl.location}}
 	<ui-gmap-google-map center='ctrl.map.center' zoom='ctrl.map.zoom'>
-		<ui-gmap-marker ng-model="ctrl.location" idKey='ctrl.location.id' coords="ctrl.location.coords" options="{labelContent:ctrl.location.name,draggable:true}" >			
-		</ui-gmap-marker>
+		<ui-gmap-marker ng-model="ctrl.location" idKey='ctrl.location.id' coords="ctrl.location.coords" options="{labelContent:ctrl.location.name,draggable:true}" ></ui-gmap-marker>
+		<ui-gmap-search-box template="ctrl.searchbox.template" events="ctrl.searchbox.events"></ui-gmap-search-box>
 	</ui-gmap-google-map>
 	<form>
 		<div class="form-group">
@@ -12,14 +12,7 @@
 		</div>
 		<div class="form-group">
 			<label>Διεύθυνση</label>
-			<div class="row">
-				<div class="col-md-11">
-					<input ng-model="ctrl.location.address" type="text" class="form-control">
-				</div>
-				<div class="col-md-1">
-					<button type="button" class="btn btn-primary pull-right">Search</button>				
-				</div>
-			</div>
+			<input ng-model="ctrl.location.address" type="text" class="form-control">
 		</div>	
 		<div class="form-group">
 			<label>Γεωγ. μήκος</label>
