--- a/app/public/templates/profile.html
+++ b/app/public/templates/profile.html
@@ -3,7 +3,7 @@
 	{{ctrl.location}}
 	<ui-gmap-google-map center='ctrl.map.center' zoom='ctrl.map.zoom'>
 		<ui-gmap-marker ng-model="ctrl.location" idKey='ctrl.location.id' coords="ctrl.location.coords" options="{labelContent:ctrl.location.name,draggable:true}" ></ui-gmap-marker>
-		<ui-gmap-search-box template="ctrl.searchbox.template" events="ctrl.searchbox.events"></ui-gmap-search-box>
+		<ui-gmap-search-box template="ctrl.searchbox.template" events="ctrl.searchbox.events" options="{language:'el'}"></ui-gmap-search-box>
 	</ui-gmap-google-map>
 	<form>
 		<div class="form-group">
@@ -21,6 +21,9 @@
 		<div class="form-group">
 			<label>Γεωγ. πλάτος</label>
 			<input ng-model="ctrl.location.coords.latitude" type="number" class="form-control">
+		</div>
+		<div class="form-group">
+			{{ctrl.goods}}
 		</div>			
 	</form>
 </div>
